objects/LLC_BI__Product_Connection__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__Child_Product_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Product Reference</label>
        <referenceTo>LLC_BI__Product__c</referenceTo>
        <relationshipLabel>Product Connections (Child Product Reference)</relationshipLabel>
        <relationshipName>Product_Connections1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use this flag for bundles only to mark which products are required in a bundle</description>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Parent_Product_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product Reference</label>
        <referenceTo>LLC_BI__Product__c</referenceTo>
        <relationshipLabel>Product Connections</relationshipLabel>
        <relationshipName>Product_Connections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Dependency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Use_In_Branch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators select this optional boolean field to display recommended products in the In-Branch workflow. By default, it is false.</description>
        <inlineHelpText>Select this checkbox to display recommended products in the In-Branch workflow.</inlineHelpText>
        <label>Use In-Branch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nPortal__Is_Portal_Default_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox if, for this product, this ancillary service should be selected by default. If this checkbox is selected, the user filling out the online application in Customer Portal sees that this ancillary service has been automatically selected.</description>
        <label>Is Portal Default Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nPortal__Is_Portal_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox to enable this ancillary service for this product in Customer Portal. If selected, the ancillary service is offered as an option to a Customer Portal user who is filling out an online application for this product.</description>
        <label>Is Portal Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Connection</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Parent_Product_Reference__c</columns>
        <columns>LLC_BI__Child_Product_Reference__c</columns>
        <columns>LLC_BI__Is_Required__c</columns>
        <columns>nPortal__Is_Portal_Enabled__c</columns>
        <columns>LLC_BI__Use_In_Branch__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PC-{000000000}</displayFormat>
        <label>Product Connection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>